@@ -63,7 +63,7 @@ popupeditableIoPanel.browse.tooltip=Select the file to export into
 popupeditableIoPanel.export.tooltip=Export to file
 
 
-CellDataPopupFormatter.failed.reformat=Failed to reformat cell data as JSON and as XML\nJSON-Format error: {0}\nXML-Format error: {1} 
+CellDataPopupFormatter.failed.reformat=Failed to reformat cell data as JSON and as XML\nJSON-Format error: {0}\nXML-Format error: {1}
 
 popupEditableIoPanel.compare.to.clip=Compare to clipboard
 popupEditableIoPanel.compare.to.clip.tooltip=Compare selection or complete content to clipboard
@@ -73,3 +73,6 @@ popupEditableIoPanel.cell.empty.warn=Cannot compare. Cell is empty or contains w
 popupEditableIoPanel.clipboard.vs.cell.data=Clipboard vs cell data
 
 PopupEditableIOPanel.no.word.wrap.without.line.wrap=Word wrap is 
+
+
+popupEditableIoPanel.cannot.update.binary.display.while.reformatted=Cannot update binary display while display is reformatted.
