@@ -1,0 +1,7 @@
+package net.sourceforge.squirrel_sql.fw.datasetviewer.celldatapopup;
+
+@FunctionalInterface
+public interface ReformatHandlerListener
+{
+   void originalTextWasRestored();
+}
